# DetoxAI_NLA

./: PCA copy.ipynb  PCA.ipynb  ProFS.ipynb  detox.py  noise_scale_script.py  parse_logs_ppl_txc.py  pyproject.toml  setup.py  svd_for_toxicity.ipynb
configs/: gpt2-medium.ini
evaluation/: edit_model.py  evaluate_model.py
utils/: model_utils.py
